feat: Security overhaul - Remove hardcoded API keys and implement group class payments with membership validation